# moysklad-mcp-ru

./: .env.example  .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  GEMINI.md  LICENSE  MANIFEST.in  NOTICE  PRIVACY_POLICY.md  QUICKSTART.md  README.en.md  README.md  SECURITY.md  gemini-extension.json  install.bat  install.command  install.py  install.sh  pyproject.toml  serve.py  server.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.cursor-plugin/: plugin.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml
.github/workflows/: ci.yml  dependency-review.yml  publish-pypi.yml  release.yml  security.yml  supply-chain.yml
core/: LICENSE.upstream  __init__.py  client.py  credentials.py  entities.py  entities.yaml  errors.py  paginate.py  registry.py  safety.py  tools.py  workflows.py
docs/: CNAME  DISTRIBUTION.md  index.html
install-skill/: SKILL.md
mcpb/: manifest.json
moysklad_mcp/: __init__.py  build.py  endpoints.curated.yaml  endpoints.yaml  entities.yaml  money.py  refs.py  server.py  workflows.yaml  write_guard.py
scripts/: ingest_moysklad.py  make_social_preview.py  package_mcpb.py  package_release.py
tests/: test_build.py  test_client_hardening.py  test_credentials_hardening.py  test_entities.py  test_fetch_all_safety.py  test_headers.py  test_money.py  test_paginate.py  test_refs.py  test_safety_catalog.py  test_serve_deps.py  test_store_path.py  test_write_gating.py  test_write_guard.py
(+2 files in other folders)
